@@ -62,6 +62,24 @@ void MenuActivate2Arg(PyMOLGlobals *G,int x,int y,int last_x,int last_y,int pass
   PUnblock(G);
 #endif
 }
+void MenuActivate1Arg(PyMOLGlobals *G,int x,int y,int last_x,int last_y,int passive,
+                      char *name,char *arg1)
+{
+#ifndef _PYMOL_NOPY
+  PyObject *list;
+
+  PBlock(G); 
+
+  list = PyObject_CallMethod(P_menu,name,"Os",G->P_inst->cmd,arg1); 
+  if(PyErr_Occurred()) PyErr_Print();
+  if(list) {
+    PopUpNew(G,x,y,last_x,last_y,passive,list,NULL);
+    Py_DECREF(list);
+  }
+  PUnblock(G);
+#endif
+}
+
 
 void MenuActivate0Arg(PyMOLGlobals *G,int x,int y,int last_x,int last_y,int passive,
                       char *name)
